--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="nspDi4qQ83TID9WMpEf9JUCo5P42bi2hEo3hXdRu-vY" />
     <title>DevLog // Naoma Strategic Lab</title>
     <style>
         :root { --bg: #0d1117; --text: #c9d1d9; --accent: #58a6ff; }
