--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
             <p>ここには、次なる「世界改変」のためのコードを蓄積していく予定だ。</p>
         </section>
 
+        <section style="margin-top:40px;">
+            <h3>■ 03. 訪問者の足跡を記録する術 (Event Listener)</h3>
+            <div class="code-box">
+                <code>
+window.addEventListener('load', () => {
+    console.log('秘密のアクセスを検知：' + new Date().toLocaleString());
+});
+                </code>
+            </div>
+            <p class="memo">※解説：ページが読み込まれた瞬間に時刻を記録。Googleサーチコンソールと併用し、刺客の侵入を監視する。</p>
+        </section>
+
         <div class="footer">© 2026 Naoma Strategic Lab. Unauthorized access denied.</div>
     </div>
 </body>
