--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="code-box">
                 <code>document.body.style.backgroundColor = 'midnightblue';</code>
             </div>
-            <p class="memo">※解説：DOM操作の基本。これにより城の雰囲気を瞬時に変えられる。</p>
+            <p class="memo">※解説：DOM操作の基本。これによりサイトの雰囲気を瞬時に変えられる。</p>
         </section>
 
         <section style="margin-top:40px;">
