--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
             </div>
             <p class="memo">※解説：1行の命令で、お城の「昼と夜」を逆転させる。擬態の基本術である。</p>
         </section>
+
+        <section style="margin-top:40px;">
+            <h3>■ 02. 動的な入力監視 (Input Monitor)</h3>
+            <textarea id="memo-area" placeholder="ここに極秘事項を入力せよ..." style="width: 100%; height: 100px; background: var(--box-bg); color: var(--text); border: 1px solid #30363d; border-radius: 6px; padding: 10px; font-family: inherit;"></textarea>
+            <p id="char-count" style="text-align: right; font-size: 0.8rem; color: var(--accent);">文字数: 0</p>
+            <p class="memo">※解説：入力された信号をリアルタイムで解析。レポート作成や暗号文の長さチェックに最適。</p>
+        </section>
         
         <div class="footer">© 2026 Naoma Strategic Lab.</div>
     </div>
