--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
             <p id="char-count" style="text-align: right; font-size: 0.8rem; color: var(--accent);">文字数: 0</p>
             <p class="memo">※解説：入力された信号をリアルタイムで解析。レポート作成や暗号文の長さチェックに最適。</p>
         </section>
+
+        <section style="margin-top:40px;">
+            <h3>■ 03. 純粋HTMLによる情報格納 (Details)</h3>
+            <details style="background: var(--box-bg); border: 1px solid var(--accent); border-radius: 6px; padding: 10px; cursor: pointer;">
+                <summary style="font-weight: bold; color: var(--accent);">[ クリックして極秘ファイルを開く ]</summary>
+                <div style="margin-top: 15px; padding: 10px; border-top: 1px dashed var(--accent);">
+                    <p>・いろんなメモ</p>
+                    <p>・独り言を書きまくる</p>
+                    <p>・ここに次に作りたい機能をリストアップする</p>
+                </div>
+            </details>
+            <p class="memo">※解説：スクリプトを介さずブラウザ標準機能のみで動作。</p>
+        </section>
         
         <div class="footer">© 2026 Naoma Strategic Lab.</div>
     </div>
