--- a/index.html
+++ b/index.html
@@ -113,6 +113,32 @@
             </div>
             <p class="memo">※解説：スタイル指定のみで進捗を視覚化。</p>
         </section>
+
+        <section style="margin-top:40px;">
+            <h3>■ 06. 外部リソースへの転送門 (Hyperlink)</h3>
+            <div class="code-box">
+                <style>
+                    .link-list a { color: #58a6ff; text-decoration: none; display: block; margin: 5px 0; }
+                    .link-list a:hover { text-decoration: underline; }
+                </style>
+                <div class="link-list">
+                    <a href="https://github.com" target="_blank">> GitHub Portal</a>
+                    <a href="https://vercel.com" target="_blank">> Vercel Control</a>
+                    <a href="https://google.com" target="_blank">> Global Search</a>
+                </div>
+            </div>
+            <p class="memo">※解説：頻繁に利用する聖域へのショートカット。ブックマークを汚さずに移動可能。</p>
+        </section>
+
+        <section style="margin-top:40px;">
+            <h3>■ 07. 色彩調和の定義 (Color Palette)</h3>
+            <div class="code-box" style="display: flex; gap: 10px;">
+                <div style="width: 50px; height: 50px; background: #58a6ff; border-radius: 4px;" title="Accent"></div>
+                <div style="width: 50px; height: 50px; background: #79c0ff; border-radius: 4px;" title="Sub"></div>
+                <div style="width: 50px; height: 50px; background: #d2a8ff; border-radius: 4px;" title="Secret"></div>
+            </div>
+            <p class="memo">※解説：城のデザインを統一するための魔力。視覚的な美しさを保つための基準点。</p>
+        </section>
         
         <div class="footer">© 2026 Naoma Strategic Lab.</div>
     </div>
