--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="nspDi4qQ83TID9WMpEf9JUCo5P42bi2hEo3hXdRu-vY" />
-    <title>DevLog // Naoma Strategic Lab</title>
+    <title>なおまの研究所</title>
     <style>
         /* ★基本の色の定義（ダークモード） */
         :root {
