--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     .hover-card:hover { border-color: var(--accent); transform: translateY(-5px); box-shadow: 0 5px 15px rgba(88, 166, 255, 0.2); }
                 </style>
                 <p style="margin: 0; color: var(--accent); font-weight: bold;">[ Hover Me ]</p>
-                <p style="font-size: 0.8rem; margin-top: 10px;">マウス（または指）を置くと、カードが浮き上がり、魔力が供給される演出。JSなしでも「生きている城」を演出可能。</p>
+                <p style="font-size: 0.8rem; margin-top: 10px;">マウス（または指）を置くと、カードが浮き上がり、魔力が供給される演出。JSなしでも「生きているサイト」を演出可能。</p>
             </div>
             <p class="memo">※解説：疑似クラス :hover を活用。訪問者に「反応するサイト」という印象を植え付ける。</p>
         </section>
