--- a/index.html
+++ b/index.html
@@ -184,6 +184,17 @@
             </div>
             <p class="memo">※解説：アニメーション（@keyframes）による視覚的躍動。JSを1行も使わず、サイトのシステムが稼働中であることを示す。</p>
         </section>
+
+        <section style="margin-top:40px;">
+            <h3>■ 11. 秘匿された転送経路 (Hidden Path)</h3>
+            <div class="code-box">
+                <p style="margin: 0; font-size: 0.9rem;">
+                    この城の地下には、膨大な<a href="https://github.com/naomasamanz/naoma-site" target="_blank" style="color: inherit; text-decoration: none; cursor: default; border-bottom: 1px dashed #30363d;">知識</a>が眠っている。
+                    不用意に触れる者は、コードの深淵に呑み込まれるだろう。
+                </p>
+            </div>
+            <p class="memo">※解説：一見ただのテキストだが、「知識」という単語にのみGitHubへのリンクを擬態させている。知る者のみが辿り着ける通路。</p>
+        </section>
         
         <div class="footer">© 2026 Naoma Strategic Lab.</div>
     </div>
