--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <button id="toggle-btn" onclick="toggleMode()">🌙 Mode Switch</button>
         </div>
 
+        <h1><a href="secret.html">裏サイトへの入口</a></h1>
+
         <header>
             <h1>> NAOMA_DEVELOPMENT_LOG</h1>
             <p>Vercel & GitHub 連携の技術検証ポータル</p>
