--- a/secret.html
+++ b/secret.html
@@ -13,9 +13,9 @@
 <body>
     <div class="warning">
         <h1>WARNING: TOP SECRET AREA</h1>
-        <p>ここは許可された者のみが閲覧を許される、なおま城の最深部である。</p>
+        <p>ここはなおまの研究所の最深部である。今はまだ開発中だ。</p>
     </div>
     <br>
-    <a href="index.html">← 本丸（メイン）へ戻る</a>
+    <a href="index.html">← メインへ戻る</a>
 </body>
 </html>
