--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button id="toggle-btn" onclick="toggleMode()">🌙 Mode Switch</button>
         </div>
 
-        <h4><a href="secret.html">裏サイトへの入口</a></h4>
+        <h4><a href="secret.html">現在開発途中</a></h4>
 
         <header>
             <h1>> NAOMA_DEVELOPMENT_LOG</h1>
