--- a/secret.html
+++ b/secret.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Deep Layer // Secret</title>
+    <title>なおまの研究所 - 2</title>
     <style>
         body { background: #000; color: #0f0; font-family: 'Consolas', monospace; padding: 50px; text-align: center; }
         .warning { border: 2px solid #0f0; padding: 20px; display: inline-block; animation: blink 1s infinite; }
