--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         </header>
 
         <section>
-            <h3>■ 01. モード切替の仕組み (Class Toggle)</h3>
+            <h3>■ 01. なおまの研究所 (NAOMA LAB)</h3>
             <div class="code-box">
                 <button class="copy-btn" onclick="copyCode(this)">Copy</button>
-                <code>document.body.classList.toggle('light-mode');</code>
+                <code>https://naomasite.vercel.app/</code>
             </div>
-            <p class="memo">※解説：1行の命令で、お城の「昼と夜」を逆転させる。擬態の基本術である。</p>
+            <p class="memo">※解説：なおまの研究所のURL。シェアしよう。</p>
         </section>
 
         <section style="margin-top:40px;">
