Update and rename secret.html to kenkyu-2.html

--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>なおまの研究所 - 2</title>
+    <meta name="description" content="これはもう１つの研究所だ。>
     <style>
         body { background: #000; color: #0f0; font-family: 'Consolas', monospace; padding: 50px; text-align: center; }
         .warning { border: 2px solid #0f0; padding: 20px; display: inline-block; animation: blink 1s infinite; }
