--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button id="toggle-btn" onclick="toggleMode()">🌙 Mode Switch</button>
         </div>
 
-        <h4 class="memo"><a href="secret.html">現在開発途中</a></h4>
+        <h4 class="memo"><a href="kenkyu-2.html">現在開発途中</a></h4>
 
         <header>
             <h1>> NAOMA_DEVELOPMENT_LOG</h1>
