--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="warning">
-        <h1>WARNING: TOP SECRET AREA</h1>
+        <h1>まだここには何もありません。</h1>
         <p>ここはなおまの研究所の最深部である。今はまだ開発中だ。</p>
     </div>
     <br>
