--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="google-site-verification" content="nspDi4qQ83TID9WMpEf9JUCo5P42bi2hEo3hXdRu-vY" />
     <title>なおまの研究所</title>
     <meta name="description" content="なおまが運営する、VercelとGitHubを駆使した技術検証用サイト。ここでは日々、新たな術が開発されている。">
+    <link rel="canonical" href="https://naomasite.vercel.app/">
     <script defer src="/_vercel/insights/script.js"></script>
     <style>
         /* ★基本の色の定義（ダークモード） */
