--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <a href="https://testsite-drab.vercel.app/">こちらもよろしくお願いします。</a>
     <div class="warning">
         <h1>まだここには何もありません。</h1>
         <p>ここはなおまの研究所の最深部である。今はまだ開発中だ。</p>
