--- a/index.html
+++ b/index.html
@@ -366,6 +366,8 @@
         <div class="footer">© 2026 Naoma Strategic Lab.</div>
     </div>
 
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaOXVPB7WV3KudvLKw7N1zoUl-cefB0C-rBurOP8Z9slYkVQ/viewform?embedded=true" width="640" height="582" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+
     <script>
 
         // ★文字数カウントの仕組み
