--- a/index.html
+++ b/index.html
@@ -157,6 +157,27 @@
             <p class="memo">※解説：保持中のみ音声回路接続。</p>
         </section>
 
+        <section style="margin-top:40px;">
+            <h3>■ 09. 言語境界の破壊 (Global Translator)</h3>
+            <div style="background: var(--box-bg); padding: 20px; border-radius: 8px; border: 1px solid var(--accent); text-align: center;">
+                <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 15px;">異国の刺客よ、このボタンで城の言葉を塗り替えよ。</p>
+                
+                <div id="google_translate_element" style="display: inline-block; padding: 10px; background: #000; border-radius: 4px;"></div>
+
+                <script type="text/javascript">
+                    function googleTranslateElementInit() {
+                        new google.translate.TranslateElement({
+                            pageLanguage: 'ja',
+                            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                            autoDisplay: false
+                        }, 'google_translate_element');
+                    }
+                </script>
+                <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+            </div>
+            <p class="memo">※解説：Googleの翻訳エンジンを城内に召喚。JSにより瞬時にサイト全体の言語を書き換える。これぞグローバル拠点の証。</p>
+        </section>
+
         <footer style="margin-top: 80px; padding: 40px 20px; border-top: 1px solid #30363d; text-align: center;">
             <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 20px;">© 2026 Naoma Strategic Lab.</p>
             <div style="margin-top: 10px;">
