--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </script>
                 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
             </div>
-            <p class="memo">※解説：Googleの翻訳エンジンを城内に召喚。JSにより瞬時にサイト全体の言語を書き換える。これぞグローバル拠点の証。</p>
+            <p class="memo">※解説：Googleの翻訳エンジンをサイト内に召喚。JSにより瞬時にサイト全体の言語を書き換える。これぞグローバル拠点の証。</p>
         </section>
 
         <footer style="margin-top: 80px; padding: 40px 20px; border-top: 1px solid #30363d; text-align: center;">
