--- a/index.html
+++ b/index.html
@@ -178,6 +178,21 @@
             <p class="memo">※解説：Googleの翻訳エンジンをサイト内に召喚。JSにより瞬時にサイト全体の言語を書き換える。これぞグローバル拠点の証。</p>
         </section>
 
+        <section style="margin-top:40px;">
+            <h3>■ 10. なおまの訓示 (Overlord's Creed)</h3>
+            <div style="background: var(--box-bg); padding: 40px 20px; border: 2px double var(--accent); border-radius: 8px; text-align: center; position: relative;">
+                <span style="position: absolute; top: 10px; left: 10px; color: var(--accent); font-size: 1.2rem; opacity: 0.5;">『</span>
+                
+                <p style="font-size: 1.1rem; color: var(--text); font-style: italic; letter-spacing: 2px; line-height: 2;">
+                    コードは祈りであり、<br>
+                    バグは試練である。<br>
+                </p>
+
+                <span style="position: absolute; bottom: 10px; right: 10px; color: var(--accent); font-size: 1.2rem; opacity: 0.5;">』</span>
+            </div>
+            <p class="memo">※解説：JSを一切使わず、二重線（double）と余白だけで威厳を表現。</p>
+        </section>
+
         <footer style="margin-top: 80px; padding: 40px 20px; border-top: 1px solid #30363d; text-align: center;">
             <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 20px;">© 2026 Naoma Strategic Lab.</p>
             <div style="margin-top: 10px;">
