--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </style>
                 <div class="neon-text">System Active</div>
             </div>
-            <p class="memo">※解説：JS不使用。多重text-shadowとanimationの組み合わせにより、真空管やネオンサインが瞬くような有機的な光を演出。城の「生存」を視覚的に主張する。</p>
+            <p class="memo">※解説：JS不使用。多重text-shadowとanimationの組み合わせにより、真空管やネオンサインが瞬くような有機的な光を演出。システムの「生存」を視覚的に主張する。</p>
         </section>
 
         <footer style="margin-top: 80px; padding: 40px 20px; border-top: 1px solid #30363d; text-align: center;">
