--- a/404.html
+++ b/404.html
@@ -21,8 +21,9 @@
 </head>
 <body>
     <div class="glitch">404</div>
-    <div class="msg">ERROR:お探しのページは存在しないようです。</div>
+    <div class="msg">ERROR:お探しのページは見つかりませんでした。</div>
     <br><br>
     <a href="index.html">メインへ帰還する</a>
+    <a href="https://testsite-drab.verecl.app/">こちらもよろしくお願いします。</a>
 </body>
 </html>
