--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
     <div class="glitch">404</div>
     <div class="msg">ERROR:お探しのページは見つかりませんでした。</div>
     <br><br>
-    <a href="index.html">メインへ帰還する</a>
-    <a href="https://testsite-drab.verecl.app/">こちらもよろしくお願いします。</a>
+    <p><a href="index.html">メインへ帰還する</a></p>
+    <p><a href="https://testsite-drab.vercel.app/">こちらもよろしくお願いします。</a></p>
 </body>
 </html>
