--- a/index.html
+++ b/index.html
@@ -260,6 +260,52 @@
             <p class="memo">※解説：JS不使用。多重text-shadowとanimationの組み合わせにより、真空管やネオンサインが瞬くような有機的な光を演出。システムの「生存」を視覚的に主張する。</p>
         </section>
 
+        <section style="margin-top:40px;">
+            <h3>■ 13. 三位一体の記録 (Trinity Archives)</h3>
+            <div class="trinity-box" style="background: var(--box-bg); border: 1px solid var(--accent); border-radius: 8px; padding: 20px;">
+                
+                <input type="radio" id="tab1" name="trinity" checked style="display:none;">
+                <input type="radio" id="tab2" name="trinity" style="display:none;">
+                <input type="radio" id="tab3" name="trinity" style="display:none;">
+
+                <div style="display: flex; gap: 10px; margin-bottom: 20px;">
+                    <label for="tab1" class="tab-btn">過去</label>
+                    <label for="tab2" class="tab-btn">現在</label>
+                    <label for="tab3" class="tab-btn">未来</label>
+                </div>
+
+                <div class="content-panel panel1" style="display:none;">
+                    <p style="color: #8b949e;">[アーカイブ] 2026年、なおまの研究所は一つのURLから始まった…。</p>
+                </div>
+                <div class="content-panel panel2" style="display:none;">
+                    <p style="color: var(--accent); font-weight: bold;">[ライブ] 現在、第13セクションまで拡張完了。城主の覇道は止まらない。</p>
+                </div>
+                <div class="content-panel panel3" style="display:none;">
+                    <p style="color: #ff79c6; text-shadow: 0 0 5px;">[予言] 第99セクションに到達せし時、この城は伝説となるだろう。</p>
+                </div>
+
+                <style>
+                    /* スイッチの見た目 */
+                    .tab-btn {
+                        flex: 1; padding: 10px; border: 1px solid var(--accent);
+                        text-align: center; cursor: pointer; border-radius: 4px; transition: 0.3s;
+                    }
+                    .tab-btn:hover { background: rgba(88, 166, 255, 0.2); }
+
+                    /* 選択された時の魔法（CSSのみで判定！） */
+                    #tab1:checked ~ div label[for="tab1"] { background: var(--accent); color: #000; }
+                    #tab2:checked ~ div label[for="tab2"] { background: var(--accent); color: #000; }
+                    #tab3:checked ~ div label[for="tab3"] { background: var(--accent); color: #000; }
+
+                    /* コンテンツの出し分け（隣接セレクタの術） */
+                    #tab1:checked ~ .panel1 { display: block !important; }
+                    #tab2:checked ~ .panel2 { display: block !important; }
+                    #tab3:checked ~ .panel3 { display: block !important; }
+                </style>
+            </div>
+            <p class="memo">※解説：JSを完全に排除し、HTMLの「チェックボックス」の性質を利用して表示を切り替える高等技術。複雑な状態遷移をCSSだけで完結させている。</p>
+        </section>
+
         <footer style="margin-top: 80px; padding: 40px 20px; border-top: 1px solid #30363d; text-align: center;">
             <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 20px;">© 2026 Naoma Strategic Lab.</p>
             <div style="margin-top: 10px;">
