--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
                     <p style="color: #8b949e;">[アーカイブ] 2026年、なおまの研究所は一つのURLから始まった…。</p>
                 </div>
                 <div class="content-panel panel2" style="display:none;">
-                    <p style="color: var(--accent); font-weight: bold;">[ライブ] 現在、第13セクションまで拡張完了。城主の覇道は止まらない。</p>
+                    <p style="color: var(--accent); font-weight: bold;">[ライブ] 現在、第13セクションまで拡張完了。なおまの覇道は止まらない。</p>
                 </div>
                 <div class="content-panel panel3" style="display:none;">
-                    <p style="color: #ff79c6; text-shadow: 0 0 5px;">[予言] 第99セクションに到達せし時、この城は伝説となるだろう。</p>
+                    <p style="color: #ff79c6; text-shadow: 0 0 5px;">[予言] 第100セクションに到達せし時、なおまは喜ぶだろう。</p>
                 </div>
 
                 <style>
