--- a/index.html
+++ b/index.html
@@ -307,6 +307,44 @@
     <p class="memo">※解説：JSを一切使わず、HTML標準の「details」と「summary」タグのみで構築。情報のカプセル化（必要な時だけ見せる）を究極のシンプルさで実現している。</p>
 </section>
 
+        <section style="margin-top:40px;">
+            <h3>■ 14. 魔力貯蔵庫 (Energy Capacitor)</h3>
+            <div style="background: var(--box-bg); padding: 25px; border: 1px solid var(--accent); border-radius: 8px;">
+                
+                <div style="margin-bottom: 20px;">
+                    <div style="display: flex; justify-content: space-between; font-size: 0.8rem; margin-bottom: 5px; color: var(--accent);">
+                        <span>SERVER STABILITY</span>
+                        <span>98%</span>
+                    </div>
+                    <div style="width: 100%; height: 8px; background: #30363d; border-radius: 4px; overflow: hidden;">
+                        <div style="width: 98%; height: 100%; background: var(--accent); box-shadow: 0 0 10px var(--accent);"></div>
+                    </div>
+                </div>
+
+                <div style="margin-bottom: 20px;">
+                    <div style="display: flex; justify-content: space-between; font-size: 0.8rem; margin-bottom: 5px; color: #ff79c6;">
+                        <span>RESEARCH PROGRESS</span>
+                        <span>65%</span>
+                    </div>
+                    <div style="width: 100%; height: 8px; background: #30363d; border-radius: 4px; overflow: hidden;">
+                        <div style="width: 65%; height: 100%; background: #ff79c6; box-shadow: 0 0 10px #ff79c6;"></div>
+                    </div>
+                </div>
+
+                <div>
+                    <div style="display: flex; justify-content: space-between; font-size: 0.8rem; margin-bottom: 5px; color: #50fa7b;">
+                        <span>OVERLORD CALM</span>
+                        <span>100%</span>
+                    </div>
+                    <div style="width: 100%; height: 8px; background: #30363d; border-radius: 4px; overflow: hidden;">
+                        <div style="width: 100%; height: 100%; background: #50fa7b; box-shadow: 0 0 10px #50fa7b;"></div>
+                    </div>
+                </div>
+
+            </div>
+            <p class="memo">※解説：JS不使用。HTMLのwidth属性のみで進捗を表現。シンプルながら、現在のサイトの「稼働状況」を直感的に刺客へ見せつけることができる計器群。</p>
+        </section>
+
         <footer style="margin-top: 80px; padding: 40px 20px; border-top: 1px solid #30363d; text-align: center;">
             <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 20px;">© 2026 Naoma Strategic Lab.</p>
             <div style="margin-top: 10px;">
