--- a/index.html
+++ b/index.html
@@ -308,43 +308,48 @@
 </section>
 
         <section style="margin-top:40px;">
-            <h3>■ 14. 魔力貯蔵庫 (Energy Capacitor)</h3>
-            <div style="background: var(--box-bg); padding: 25px; border: 1px solid var(--accent); border-radius: 8px;">
+            <h3>■ 14. 真・魔力増幅炉 (Active Power Core)</h3>
+            <div class="power-core" style="background: var(--box-bg); padding: 30px; border: 2px solid var(--accent); border-radius: 8px; text-align: center;">
                 
-                <div style="margin-bottom: 20px;">
-                    <div style="display: flex; justify-content: space-between; font-size: 0.8rem; margin-bottom: 5px; color: var(--accent);">
-                        <span>SERVER STABILITY</span>
-                        <span>98%</span>
-                    </div>
-                    <div style="width: 100%; height: 8px; background: #30363d; border-radius: 4px; overflow: hidden;">
-                        <div style="width: 98%; height: 100%; background: var(--accent); box-shadow: 0 0 10px var(--accent);"></div>
-                    </div>
+                <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 20px;">スイッチを起動し、城の出力を物理的に上昇させよ。</p>
+
+                <div style="display: flex; justify-content: center; gap: 15px; margin-bottom: 30px;">
+                    <input type="checkbox" id="core1" style="display:none;">
+                    <label for="core1" class="core-btn">出力 A</label>
+
+                    <input type="checkbox" id="core2" style="display:none;">
+                    <label for="core2" class="core-btn">出力 B</label>
+
+                    <input type="checkbox" id="core3" style="display:none;">
+                    <label for="core3" class="core-btn">出力 C</label>
                 </div>
 
-                <div style="margin-bottom: 20px;">
-                    <div style="display: flex; justify-content: space-between; font-size: 0.8rem; margin-bottom: 5px; color: #ff79c6;">
-                        <span>RESEARCH PROGRESS</span>
-                        <span>65%</span>
-                    </div>
-                    <div style="width: 100%; height: 8px; background: #30363d; border-radius: 4px; overflow: hidden;">
-                        <div style="width: 65%; height: 100%; background: #ff79c6; box-shadow: 0 0 10px #ff79c6;"></div>
-                    </div>
+                <div style="width: 100%; height: 30px; background: #1a1b26; border-radius: 15px; border: 1px solid #30363d; position: relative; overflow: hidden; display: flex;">
+                    <div class="energy-bar bar1" style="height: 100%; width: 0; background: #50fa7b; transition: width 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);"></div>
+                    <div class="energy-bar bar2" style="height: 100%; width: 0; background: #8be9fd; transition: width 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);"></div>
+                    <div class="energy-bar bar3" style="height: 100%; width: 0; background: #ff79c6; transition: width 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);"></div>
                 </div>
 
-                <div>
-                    <div style="display: flex; justify-content: space-between; font-size: 0.8rem; margin-bottom: 5px; color: #50fa7b;">
-                        <span>OVERLORD CALM</span>
-                        <span>100%</span>
-                    </div>
-                    <div style="width: 100%; height: 8px; background: #30363d; border-radius: 4px; overflow: hidden;">
-                        <div style="width: 100%; height: 100%; background: #50fa7b; box-shadow: 0 0 10px #50fa7b;"></div>
-                    </div>
-                </div>
+                <style>
+                    /* ボタンの基本装飾 */
+                    .core-btn {
+                        padding: 10px 20px; border: 1px solid var(--accent); border-radius: 20px;
+                        cursor: pointer; color: var(--accent); font-size: 0.8rem; transition: 0.3s;
+                    }
+                    /* チェックされたらボタンを光らせる */
+                    #core1:checked ~ div label[for="core1"] { background: #50fa7b; color: #000; border-color: #50fa7b; box-shadow: 0 0 15px #50fa7b; }
+                    #core2:checked ~ div label[for="core2"] { background: #8be9fd; color: #000; border-color: #8be9fd; box-shadow: 0 0 15px #8be9fd; }
+                    #core3:checked ~ div label[for="core3"] { background: #ff79c6; color: #000; border-color: #ff79c6; box-shadow: 0 0 15px #ff79c6; }
 
+                    /* ★ここが魔術の真骨頂：チェックされた数だけ、ゲージを伸ばす！ */
+                    #core1:checked ~ div.energy-bar.bar1 { width: 33.3% !important; }
+                    #core2:checked ~ div.energy-bar.bar2 { width: 33.3% !important; }
+                    #core3:checked ~ div.energy-bar.bar3 { width: 33.4% !important; }
+                </style>
             </div>
-            <p class="memo">※解説：JS不使用。HTMLのwidth属性のみで進捗を表現。シンプルながら、現在のサイトの「稼働状況」を直感的に刺客へ見せつけることができる計器群。</p>
+            <p class="memo">※解説：JS不使用。三つの独立したチェックボックスの状態をCSSで合成。スイッチを押すたびに「物理的にHTMLの幅が変動する」様子を体験できる。これぞ、論理回路の具現化。</p>
         </section>
-
+        
         <footer style="margin-top: 80px; padding: 40px 20px; border-top: 1px solid #30363d; text-align: center;">
             <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 20px;">© 2026 Naoma Strategic Lab.</p>
             <div style="margin-top: 10px;">
