--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@
 </section>
 
      <section style="margin-top:40px;">
-    <h3>■ 14. 真・魔力増幅炉 (Active Power Core)</h3>
+    <h3>■ 14. 魔力増幅炉 (Active Power Core)</h3>
     <div class="power-core" style="background: #0d1117; padding: 30px; border: 2px solid #58a6ff; border-radius: 8px; text-align: center;">
         
-        <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 20px;">スイッチを起動し、城の出力を物理的に上昇させよ。</p>
+        <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 20px;">スイッチを起動してみてください。</p>
 
         <div style="display: flex; justify-content: center; gap: 15px; margin-bottom: 30px;">
             <div class="btn-unit">
